w2v_server/nohup.out
  File "word2vec_server.py", line 60
    else Exception,e:
                 ^
SyntaxError: invalid syntax
Starting word2vec server...
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'horton'
u'instagram'
u'op-ed'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'63'
u'\u0425\u0430\u0431\u0430\u0440\u043e\u0432\u0441\u043a\u043e\u0433\u043e'
u'2017'
u'\u0420\u0424'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'10'
u'000'
u'\u0391\u03b3\u03ce\u03bd\u03b5\u03c2'
u'testosteronspiegel'
u'800'
u'geschlechtstests'
u'nicht bestanden'
u'testosteronspiegel'
u'800'
u'geschlechtstests'
u'testosteronspiegel'
u'800'
u'geschlechtstests'
u'testosteronspiegel'
u'800'
u'geschlechtstests'
u'schrecken '
u'testosteronspiegel'
u'800'
u'geschlechtstests'
u'testosteronspiegel'
u'800'
u'geschlechtstests'
u'testosteronspiegel'
u'800'
u'geschlechtstests'
u'testosteronspiegel'
u'800'
u'geschlechtstests'
u'testosteronspiegel'
u'800'
u'geschlechtstests'
u'\xdcberraschung'
u'nicht bestanden'
u'schrecken '
u'\xdcberraschung'
u'mars-mission'
u'nicht bestanden'
u'mars-mission'
u'mars-mission'
u'mars-mission'
u'schrecken '
u'mars-mission'
u'mars-mission'
u'mars-mission'
u'mars-mission'
u'mars-mission'
u'\xdcberraschung'
u'kurzarbeitergeld'
u'getriebeteilen'
u'nicht bestanden'
u'kurzarbeitergeld'
u'getriebeteilen'
u'kurzarbeitergeld'
u'getriebeteilen'
u'kurzarbeitergeld'
u'getriebeteilen'
u'schrecken '
u'kurzarbeitergeld'
u'getriebeteilen'
u'kurzarbeitergeld'
u'getriebeteilen'
u'kurzarbeitergeld'
u'getriebeteilen'
u'kurzarbeitergeld'
u'getriebeteilen'
u'kurzarbeitergeld'
u'getriebeteilen'
u'\xdcberraschung'
u'nicht bestanden'
u'schrecken '
u'\xdcberraschung'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
u'\u901f\u8981'
u'10gbps'
u'60ghz'
u'\u6768\u8d85\u658c'
